@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -37,51 +36,12 @@ public class CarRequestServiceImpl implements CarRequestService {
     }
 
     @Override
-    public List<CarRequest> getAllCarRequests() {
-        return carRequestDao.findAll();
-    }
-
-    @Override
     public List<CarRequest> getCarRequestsByStatus(final String status) {
-        final String normalizedStatus = normalize(status);
+        final String normalizedStatus = StringUtils.normalize(status);
         if (normalizedStatus == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         return carRequestDao.findByStatus(normalizedStatus);
-    }
-
-    @Override
-    @Transactional
-    public CarRequest createPendingRequest(final long submittedByUserId, final String submitterEmail,
-                                           final long brandId, final long bodyTypeId, final String model,
-                                           final String description, final Optional<String> imageContentType,
-                                           final Optional<byte[]> imageData, final String fuelType,
-                                           final Integer horsepower, final Integer airbagCount,
-                                           final String transmission, final BigDecimal fuelConsumption,
-                                           final Integer maxSpeedKmh) {
-        final boolean hasImageContentType = imageContentType.isPresent();
-        final boolean hasImageData = imageData.isPresent();
-        if (hasImageContentType != hasImageData) {
-            throw new IllegalArgumentException("Image metadata and payload must be provided together.");
-        }
-        final List<CarImagePayload> images = hasImageContentType
-                ? List.of(new CarImagePayload(imageContentType.orElseThrow(), imageData.orElseThrow()))
-                : Collections.emptyList();
-        return createPendingRequest(
-                submittedByUserId,
-                submitterEmail,
-                brandId,
-                bodyTypeId,
-                model,
-                description,
-                images,
-                fuelType,
-                horsepower,
-                airbagCount,
-                transmission,
-                fuelConsumption,
-                maxSpeedKmh
-        );
     }
 
     @Override
@@ -92,16 +52,9 @@ public class CarRequestServiceImpl implements CarRequestService {
                                            final String fuelType, final Integer horsepower,
                                            final Integer airbagCount, final String transmission,
                                            final BigDecimal fuelConsumption, final Integer maxSpeedKmh) {
-        final String normalizedModel = normalize(model);
-        if (normalizedModel == null) {
-            throw new IllegalArgumentException("Model is required for car requests.");
-        }
-
-        final String normalizedDescription = normalize(description);
-        if (normalizedDescription == null) {
-            throw new IllegalArgumentException("Description is required for car requests.");
-        }
-        final List<CarImagePayload> normalizedImages = normalizeImages(images);
+        final String normalizedModel = StringUtils.normalizeRequired(model, "Model is required for car requests.");
+        final String normalizedDescription = StringUtils.normalizeRequired(description, "Description is required for car requests.");
+        final List<CarImagePayload> normalizedImages = ImagePayloadUtils.normalizeImages(images);
         final CarImagePayload coverImage = normalizedImages.isEmpty() ? null : normalizedImages.get(0);
 
         try {
@@ -180,15 +133,8 @@ public class CarRequestServiceImpl implements CarRequestService {
             return false;
         }
 
-        final String normalizedModel = normalize(model);
-        if (normalizedModel == null) {
-            throw new IllegalArgumentException("Model is required to approve car requests.");
-        }
-
-        final String normalizedDescription = normalize(description);
-        if (normalizedDescription == null) {
-            throw new IllegalArgumentException("Description is required to approve car requests.");
-        }
+        final String normalizedModel = StringUtils.normalizeRequired(model, "Model is required to approve car requests.");
+        final String normalizedDescription = StringUtils.normalizeRequired(description, "Description is required to approve car requests.");
 
         final boolean hasImageContentType = imageContentType.isPresent();
         final boolean hasImageData = imageData.isPresent();
@@ -238,24 +184,5 @@ public class CarRequestServiceImpl implements CarRequestService {
         return carRequestDao.updateStatus(id, STATUS_PENDING, STATUS_REJECTED);
     }
 
-    private String normalize(final String value) {
-        if (value == null) {
-            return null;
-        }
-        final String trimmed = value.trim();
-        return trimmed.isEmpty() ? null : trimmed;
-    }
-
-    private List<CarImagePayload> normalizeImages(final List<CarImagePayload> images) {
-        if (images == null) {
-            return Collections.emptyList();
-        }
-        for (final CarImagePayload image : images) {
-            if (image == null || image.getContentType() == null || image.getContentType().isBlank()
-                    || image.getImageData() == null || image.getImageData().length == 0) {
-                throw new IllegalArgumentException("Image metadata and payload must be provided together.");
-            }
-        }
-        return List.copyOf(images);
-    }
 }
+
